--- a/home.css
+++ b/home.css
@@ -12,7 +12,6 @@ footer {
 
 header img {
 	width: 2.5rem;
-	margin: 0 0.5rem 0 0;
 }
 
 footer {
@@ -26,11 +25,24 @@ footer {
 	align-content: center;
 }
 
-body ~ div {
+body > div {
 	flex: auto;
-	margin: 1rem;
+	margin: 0.7rem;
 	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
-	align-content: center;
+}
+
+.menu,
+.files {
+	display: flex;
+	flex-direction: column;
+	margin: 0.3rem;
+}
+
+.btn {
+	padding: 0.25rem;
+	/* transition: 2s; */
+}
+
+.btn:hover {
+	color: #6ea8fe;
 }
