--- a/index.css
+++ b/index.css
@@ -18,6 +18,10 @@ footer {
 	margin: 0 0 0 0.5rem;
 }
 
+.flex-fill {
+	flex: auto;
+}
+
 header img {
 	width: 2.5rem;
 	margin: 0 0.5rem 0 0.5rem;
