--- a/main.css
+++ b/main.css
@@ -19,12 +19,11 @@ footer {
 }
 
 header > nav > .navbar-brand {
-	margin: 0 0 0 0.5rem;
+	margin: 0 0.5rem 0 0.5rem;
 }
 
 header > nav > a > img {
 	width: 2.5rem;
-	margin: 0 0.5rem 0 0.5rem;
 }
 
 .flex-fill {
@@ -37,8 +36,8 @@ header > nav > a > img {
 	align-content: center;
 }
 
-@media (max-width: 460px) {
-	header > nav > a {
+@media (max-width: 365px) {
+	header > nav > a > img {
 		display: none;
 	}
 }
