--- a/gui/public/css/main.css
+++ b/gui/public/css/main.css
@@ -14,6 +14,16 @@ footer {
 	padding: 0.5rem;
 }
 
+.flex-c {
+	display: flex;
+	flex-direction: column;
+}
+
+.flex-r {
+	display: flex;
+	flex-direction: row;
+}
+
 .navbar {
 	display: flex;
 	flex-direction: row;
@@ -32,7 +42,12 @@ header > nav > a > img {
 	width: 2.5rem;
 }
 
-.center-vert {
+.center-x {
+	display: flex;
+	justify-content: center;
+}
+
+.center-y {
 	display: flex;
 	flex-wrap: wrap;
 	align-content: center;
