--- a/gui/public/css/home.css
+++ b/gui/public/css/home.css
@@ -16,6 +16,10 @@ header form .btn {
 	padding: 0 0.5rem 0 0.5rem;
 }
 
+.black-transparent {
+	background-color: rgba(0, 0, 0, 0.8);
+}
+
 div.files {
 	width: -webkit-fill-available;
 	overflow: auto;
