--- a/gui/public/css/base.css
+++ b/gui/public/css/base.css
@@ -8,7 +8,7 @@ header > nav > button.btn.btn-primary.navbar-brand {
 	padding: 0;
 }
 
-.btn {
+.btn:not(.popupContainer .btn) {
 	padding: 0.25rem;
 	text-align: left;
 	white-space: nowrap;
