Confirm is options pop up now. Pop up uses fixed position

--- a/gui/public/css/main.css
+++ b/gui/public/css/main.css
@@ -51,8 +51,9 @@ header > nav > a > img {
 }
 
 .fill-screen {
-	position: absolute;
+	position: fixed;
 	inset: 0px;
+	height: 100vh;
 }
 
 .center-x {
