--- a/gui/public/css/base.css
+++ b/gui/public/css/base.css
@@ -1,10 +1,10 @@
-body > div {
+#content {
 	flex: auto;
 	margin: 0.4rem;
 	display: flex;
 }
 
-header > nav > button.btn.btn-primary.navbar-brand {
+#menu-toggle {
 	padding: 0;
 }
 
@@ -12,6 +12,7 @@ header > nav > button.btn.btn-primary.navbar-brand {
 	padding: 0.25rem;
 	text-align: left;
 	white-space: nowrap;
+	border: 0;
 }
 
 table > thead > tr > th.selected,
@@ -19,15 +20,8 @@ table > thead > tr > th.selected,
 	color: #6ea8fe;
 }
 
-.dropdown {
-	display: flex;
-	justify-content: left;
-	flex-wrap: wrap;
-	align-content: center;
-}
-
-.menu,
-.files {
+#menu,
+#files {
 	display: flex;
 	flex-direction: column;
 	margin: 0.2rem;
